# bf3-bench

./: .gitignore  README.md
benchmarks/: .gitignore  host_cpu_greedy_tokenizer.c
docs/: Build.md  DPU_Tokenization_Offload_Report.md  benchmark_results.md
results/: comprehensive_20251217_031105.csv  detailed_results_20251209_072009.csv  detailed_timing_20251209_073713.csv  detailed_timing_20251218_032633.csv  detailed_timing_20251218_032633_percentiles.csv  summary_20251217.csv
scripts/: cpu_tokenizer_benchmark.py  generate_charts_v3.py  generate_charts_v4.py  wordpiece_benchmark.py  wordpiece_benchmark_gpu.py  wordpiece_tokenizer.py
src/dpu_client/: bpe_tokenizer.c  bpe_tokenizer.h  dpu_client_main.c  dpu_client_sample.c  meson.build  rdma_common.h
src/host_server/: embedding_common.h  embedding_kernel.cu  gpunetio_rdma_client_server_write_main.c  meson.build  rdma_common.h  tokenizer_common.h  tokenizer_kernel.cu
src/host_server/host/: gpunetio_rdma_client_server_write_sample.c
